tests/fixtures/invalid/syntax_error.ko
// ERROR E0101
module broken {
    fn bad(
